Fix failing tests
Problem:
Unit tests were failing due to component/window not found.

Solution:
Reworked the code in SwingWidgetFinder, SwingWidgetLocator and WidgetLocator.